--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "build": "rm -rf build && tsc -p tsconfig.json",
     "clean": "rm -rf build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@types/dotenv": "^8.2.0",
+    "dotenv": "^10.0.0"
+  },
   "devDependencies": {
     "@types/node": "^16.10.1",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
